# rllm

./: .gitmodules  FLUSH_TEST_REPORT.md  README.md  RLLM_SDK_API.md  SESSION_REFACTOR_SUMMARY.md  STEP_TRAJECTORY_DECORATORS.md  blog_tinker_solver_judge.md  fetch_data.ipynb  general_program_training.py  launch_litellm.sh  litellm_proxy_config_autogen.yaml  mkdocs.yml  pyproject.toml  qwen25-7b-intruct-first1000.jsonl  test_context_store_load.py  test_context_store_load_session_concurrent.py  test_dataloader.py  test_decorators.py  test_flush_standalone.py  test_session_refactor.py  test_sqlite_tracer_flush.py  test_storage_simple.py  todo.md  wrte_to_cs.py
docs/: agent_omni_engine_dual_modes.md  index.md  otel_distributed_session_design.md  sqlite_store_optimization.md  tracer_resilience_design.md
docs/design/: auto-instrumentation.md  context_propagation_multiprocess.md  run_facade.md  verl_litellm_integration.md  vllm_token_ids_patch_analysis.md  why_uninstrument_vllm.md
docs/examples/: index.md
docs/howto/: instrument_verl_vllm_for_token_ids.md  patch_vllm_for_token_ids.md
docs/reference/: vllm_versions_comparison.md
examples/eval_protocol/: run_frozen_lake_flow.py  train_frozen_lake_flow.py
examples/math_tinker/: train_math_tinker.py  train_math_tinker.sh
examples/omni_trainer/: README.md  dual_mode_example.py
examples/proxy_demo/: call_proxy.py  litellm_proxy_config.yaml  proxy_app.py  proxy_quickstart.md  run_proxy_demo.py
examples/reward_demo/: simple_reward.py
examples/sdk/: README.md  README_TESTING.md  TESTING_OPTIONS.md  litellm_openai_config.yaml  modal_image.py  start_proxy_openai.sh  test_proxy_tracer.py  test_proxy_tracer_standalone.py  test_tracer.py  tutorial.ipynb  (+2 more)
rllm/sdk/episodic-sdk/: ARCHITECTURE.md  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
rllm/sdk/episodic-sdk/episodic/: __init__.py  base.py  cli.py  client.py  core.py  store.py  subscriptions.py
rllm/sdk/episodic-sdk/episodic/dashboard/: __init__.py  dashboard.html  dashboard.py
rllm/sdk/episodic-sdk/episodic/server/: __init__.py  app.py
scripts/: launch_litellm.sh  litellm_proxy_server.py  tracer_load_generator.py  tracer_order_checker.py
sdk/: README.md  __init__.py  client.py  context.py
tinker_cookbook/: renderers.py
(+185 files in other folders)
