[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "episodic"
dynamic = ["version"]
description = "A Python SDK for building context-oriented AI agents with persistent storage and real-time subscriptions"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
maintainers = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["context store", "ai agents", "python sdk", "real-time subscriptions"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Artificial Intelligence :: General",
]
requires-python = ">=3.8"
dependencies = [
    "websockets>=10.0",
    "aiohttp>=3.8.0",
    "pydantic>=1.9.0",
]

[project.scripts]
episodic = "episodic.cli:cli_main"

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.18.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.800",
]
semantic = [
    "sentence-transformers>=2.2.0",
    "torch>=1.11.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/episodic"
Documentation = "https://github.com/yourusername/episodic#readme"
Repository = "https://github.com/yourusername/episodic"
"Bug Tracker" = "https://github.com/yourusername/episodic/issues"

[tool.setuptools]
packages = ["episodic"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto" 